--- a/src/components/home/GallerySection/GallerySection.module.css
+++ b/src/components/home/GallerySection/GallerySection.module.css
@@ -20,7 +20,7 @@
 .title {
   font-family: var(--font-heading, 'Playfair Display', serif);
   font-size: 2.25rem;
-  color: var(--color-contrast);
+  color: var(--color-text);
   margin: 0 0 12px;
 }
 
